[package]
name = "wasif_weather_cli_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
prettytable = "0.10.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"